--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@xyflow/react": "^12.3.5",
     "arctic": "^2.2.2",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -54,9 +55,12 @@
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "nextjs-toploader": "^3.7.15",
     "oslo": "^1.2.1",
     "pg": "^8.13.1",
+    "puppeteer": "^23.9.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-countup": "^6.5.3",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
