--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-oauth/google": "^0.12.1",
+    "@sparticuz/chromium": "^131.0.1",
     "@tanstack/react-query": "^5.61.0",
     "@xyflow/react": "^12.3.5",
     "arctic": "^2.2.2",
