--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "jose": "^5.9.6"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.61.0",
@@ -87,7 +88,6 @@
     "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "jose": "^5.9.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
