--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
     "zod": "^3.23.8",
-    "jose": "^5.9.6"
+    "jose": "^5.9.6",
+    "drizzle-kit": "^0.28.1"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.61.0",
@@ -85,7 +86,6 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
