--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.3",
     "embla-carousel-react": "^8.4.0",
     "input-otp": "^1.4.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
@@ -72,12 +74,11 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "jose": "^5.9.6",
-    "drizzle-kit": "^0.28.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.61.0",
