--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@types/bcrypt": "^5.0.2"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.61.0",
