--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-oauth/google": "^0.12.1",
     "@sparticuz/chromium": "^131.0.1",
     "@tanstack/react-query": "^5.61.0",
+    "@types/bcrypt": "^5.0.2",
     "@xyflow/react": "^12.3.5",
     "arctic": "^2.2.2",
     "bcrypt": "^5.1.1",
@@ -66,6 +67,7 @@
     "oslo": "^1.2.1",
     "pg": "^8.13.1",
     "puppeteer": "^23.9.0",
+    "puppeteer-core": "^24.6.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-countup": "^6.5.3",
     "react-day-picker": "8.10.1",
@@ -78,8 +80,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "@types/bcrypt": "^5.0.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.61.0",
