--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sparticuz/chromium": "^131.0.1",
     "@tanstack/react-query": "^5.61.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/ws": "^8.18.1",
     "@xyflow/react": "^12.3.5",
     "arctic": "^2.2.2",
     "bcrypt": "^5.1.1",
@@ -80,6 +81,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
+    "ws": "^8.18.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
